# tracker_app_rebuild

./: .gitignore  README.md  check_port.ps1  id-photo-implementation.md  kill_3000.ps1  kill_all.ps1  kill_port.ps1  progress.md  rebuild.md  run_seed.py  start-dev.ps1
backend/: .env.example  ckb_tracker.db  migrate_add_offsets.py  pyproject.toml  run_server.py  seed.py  seed_complete_data.py  start.bat
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: config.py  csrf.py  jwt_utils.py
backend/app/routers/: __init__.py  attendance.py  auth.py  class_instances.py  class_types.py  classes.py  comments.py  curricula.py  dashboard.py  database.py  feedback.py  gyms.py  kiosk.py  lessons.py  news.py  roles.py  terms.py  users.py
ckb-tracker/: package-lock.json  package.json
ckb-tracker/src/app/: globals.css  layout.tsx  page.tsx
ckb-tracker/src/app/admin/: page.tsx
ckb-tracker/src/app/check-in/: page.tsx
ckb-tracker/src/app/login/: page.tsx
ckb-tracker/src/app/portal/: page.tsx
ckb-tracker/src/app/teacher/: page.tsx
ckb-tracker/src/components/: AppLayout.tsx  NavBar.tsx
ckb-tracker/src/components/comments/: CommentCard.tsx  CommentCreateForm.tsx  CommentFeed.tsx  CommentInput.tsx  CommentThread.tsx
ckb-tracker/src/components/layout/: Sidebar.tsx
ckb-tracker/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Calendar.tsx  Card.tsx  Input.tsx  (+1 more)
ckb-tracker/src/hooks/: useAuth.tsx  useChartColors.ts  useTheme.tsx
ckb-tracker/src/lib/: api.ts  supabase.ts  utils.ts
ckb-tracker/src/types/: index.ts
