[project]
name = "ckb-tracker-backend"
version = "0.1.0"
description = "CKB Tracker FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.uv]
dev-dependencies = []
